syntax = "proto3";

package validator.v1;

option go_package = "github.com/grid-stream-org/grid-stream-protos/gen/validator/v1";

message AverageOutput {
  string project_id = 1;
  double average_output = 2;
  string start_time = 3;
  string end_time = 4;
}

message ValidateAverageOutputsRequest {
  repeated AverageOutput averages = 1;
}

message ValidateAverageOutputsResponse {
  bool success = 1;
  string message = 2;
  repeated ValidationError errors = 3;
}

message ValidationError {
  string project_id = 1;
  string message = 2;
}

service ValidatorService {
  rpc ValidateAverageOutputs(ValidateAverageOutputsRequest) returns (ValidateAverageOutputsResponse);
}
